# serde-option

./: Cargo.toml  LICENSE  Maintenance.md  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pr_build.yml
serde_option_macros/: Cargo.toml
serde_option_macros/src/: lib.rs
src/: lib.rs
test/ui/: default_not_required.rs  default_not_required.stderr  invalid_item_type.rs  invalid_item_type.stderr  non_option_not_required.rs  non_option_not_required.stderr  non_option_nullable.rs  non_option_nullable.stderr  skip_not_required.rs  skip_not_required.stderr  skip_nullable.rs  skip_nullable.stderr
