[workspace]
members = ["serde_option_macros"]
resolver = "2"

[workspace.package]
repository = "https://github.com/Sanoma/serde-option"
homepage = "https://github.com/Sanoma/serde-option"
license = "MIT"
description = "Library designed to make nullable & non-required fields easier to work with using the serde library"
keywords = ["serde", "serialization", "deserialization", "optional", "nullable"]
categories = ["Encoding"]

[package]
name = "serde_option"
version = "0.2.0"
edition = "2021"
exclude = [".github/"]

repository.workspace = true
homepage.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# When the `utoipa` feature of this crate is enabled, it enables the matching feature in the wrapped proc-macro crate
utoipa = ["serde_option_macros/utoipa"]

[dependencies]
serde_option_macros = { path = "./serde_option_macros", version = "0.2.0" }

[dev-dependencies]
trybuild = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.12.0"
utoipa = "5.3.1"
