[package]
name = "serde_option_macros"
version = "0.1.0"
edition = "2021"

repository.workspace = true
homepage.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
utoipa = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
