[package]
name = "serde_option_macros"
version = "0.3.0"
edition = "2021"

repository.workspace = true
homepage.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
utoipa = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "3.15.1"
utoipa = "5.4.0"
